<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_margin="30dp">
            <TextView
                android:id="@+id/credit_tanmay_ambre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tanmay_ambre"/>
            <TextView
                android:id="@+id/credit_nampreet_singh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nampreet_singh"/>
            <TextView
                android:id="@+id/credit_girish_fuluskar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/girish_fuluskar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/mcabuddy_ibm"
                android:textSize="40sp"
                android:textStyle="bold"
                android:contentDescription="@string/mcabuddy_ibm" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
