<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adminibm.mcabuddy.MCABuddy_ChangePassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/change_password"
        android:id="@+id/lblListHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="32sp"
        android:background="@drawable/abc_textfield_default_mtrl_alpha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="13"
        android:id="@+id/oldPassword_editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:hint="@string/old_password_hint"
        android:textColor="#ff00b0f0"
        android:textStyle="bold"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/newPassword_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/new_password_hint"
        android:layout_below="@+id/oldPassword_editText"
        android:textColor="#ff00b0f0"
        android:textStyle="bold"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/confirmnewpassword_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_new_password_hint"
        android:layout_below="@+id/newPassword_edittext"
        android:textColor="#ff00b0f0"
        android:textStyle="bold"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="13"
        android:text="@string/submit"
        android:id="@+id/submitPassword_button"
        android:layout_marginTop="30dp"
        android:textColor="#fffefefe"
        android:textStyle="bold"
        android:background="#ff00b0f0"
        android:layout_below="@+id/confirmnewpassword_edittext" />

</RelativeLayout>
