<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/logout_prompt"
    android:layout_height="wrap_content"
    android:background="@android:drawable/toast_frame">

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_popup"
        android:paddingBottom="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_yes"
        android:id="@+id/yes"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_no"
        android:id="@+id/no"
        android:layout_marginLeft="90dp"
        android:layout_below="@+id/textView2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</RelativeLayout>