<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/MCABuddy_LogIn"
    android:gravity="center_horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adminibm.mcabuddy.MCABuddy_Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_mcabuddy__admin_dashboard"
        android:id="@+id/userRegistration_textView"
        android:clickable="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textIsSelectable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_editText"
        android:hint="@string/user_hint"
        android:textColor="#000000"
        android:autoText="true"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/userRegistration_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_editText"
        android:hint="@string/password_hint"
        android:textColor="#000000"
        android:autoText="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/email_editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_marginTop="25dp"
        android:textColor="#fffefefe"
        android:onClick="onClick"
        android:background="#ff00b0f0"
        android:layout_below="@+id/password_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyrights"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout> 