    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.adminibm.mcabuddy.MCABuddy_ChangeRole"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:text="@string/title_activity_change_role"
            android:id="@+id/ChangeRole_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textSize="32sp"
            android:background="@drawable/abc_textfield_default_mtrl_alpha"/>


        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/role_spinner"
            android:ems="15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:prompt="@string/spinner_title"
            android:textColor="#ff00b0f0"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/ChangeRole_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/email_editText"
            android:layout_marginTop="40dp"
            android:hint="@string/email_hint"
            android:layout_below="@+id/role_spinner"
            android:layout_alignStart="@+id/role_spinner"
            android:textColor="#ff00b0f0"
            android:inputType="textEmailAddress" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/email_editText"
            android:layout_alignEnd="@+id/email_editText"
            android:textColor="#fffefefe"
            android:background="#ff00b0f0"
            android:onClick="onChangeRole"/>

    </RelativeLayout>