<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        tools:context="com.example.adminibm.MCABuddy.MCABuddy_NewUserRegistration"
        android:scrollbars="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_activity_new_user"
            android:id="@+id/lblListHeader"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="32sp"
            android:background="@drawable/abc_textfield_default_mtrl_alpha"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:id="@+id/fname_editText"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:hint="@string/fname_hint"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/lname_editText"
            android:layout_marginTop="30dp"
            android:hint="@string/lname_hint"
            android:layout_below="@+id/fname_editText"
            android:layout_alignStart="@+id/fname_editText"
            android:textColor="#ff00b0f0"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/email_editText"
            android:layout_marginTop="30dp"
            android:hint="@string/email_hint"
            android:layout_below="@+id/lname_editText"
            android:layout_alignStart="@+id/fname_editText"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/phone_edittext"
            android:layout_marginTop="30dp"
            android:hint="@string/phone_hint"
            android:layout_below="@+id/email_editText"
            android:layout_alignStart="@+id/fname_editText"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/password_edittext"
            android:layout_marginTop="30dp"
            android:hint="@string/password_hint"
            android:layout_below="@+id/phone_edittext"
            android:layout_alignStart="@+id/fname_editText"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:id="@+id/AdmincheckBox"
            android:layout_below="@+id/password_edittext"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SME"
            android:id="@+id/SMEcheckBox"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:layout_above="@+id/signin_button"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:id="@+id/UsercheckBox"
            android:layout_above="@+id/signin_button"
            android:layout_alignRight="@+id/password_edittext"
            android:layout_alignEnd="@+id/password_edittext"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:text="@string/submit"
            android:id="@+id/signin_button"
            android:layout_marginTop="30dp"
            android:layout_alignEnd="@+id/lname_editText"
            android:textColor="#fffefefe"
            android:textStyle="bold"
            android:background="#ff00b0f0"
            android:layout_below="@+id/AdmincheckBox" />

    </RelativeLayout>
</ScrollView>