<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/MCABuddy_Profile"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adminibm.mcabuddy.MCABuddy_PostNewMessage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/header_CreateNewMessage"
        android:id="@+id/CreateNewMessage_textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/abc_textfield_default_mtrl_alpha"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject_editText"
        android:layout_below="@+id/CreateNewMessage_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/subject_hint"
        android:layout_marginBottom="5dp"
        android:maxLength="100" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_editText"
        android:layout_below="@+id/subject_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/message_hint"
        android:layout_marginBottom="20dp"
        android:inputType="textMultiLine"
        android:maxLength="300" />

    <Spinner
        android:id="@+id/channel_spinner"
        android:ems="15"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:prompt="@string/spinner_title"
        android:textColor="#ff00b0f0"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/message_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/listTagBarLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/channel_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/posttag_editText"
            android:paddingRight="10dp"
            android:hint="@string/tag"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tag1_textView"
            android:layout_alignParentTop="true"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tag2_textView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tag1_textView"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tag3_textView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tag2_textView"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tag4_textView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tag3_textView"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tag5_textView"
            android:layout_toRightOf="@+id/tag4_textView"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/numberOfLikes_textView"
            android:layout_alignParentBottom="true"
            android:textColor="#000000"
            android:layout_toLeftOf="@+id/like_imageButton"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_CreateNewMessage"
        android:id="@+id/postnewmessage_button"
        android:textColor="#fffefefe"
        android:background="#ff00b0f0"
        android:layout_below="@+id/listTagBarLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick()" />
</RelativeLayout>